--- a/style.css/style.css
+++ b/style.css/style.css
@@ -77,6 +77,17 @@ body{
     margin-left: 30px;
     margin-right: 5px;
 }
+.btn-primary{
+    height: 25px;
+    width: 80px;
+    margin-top: 70px;
+    margin-left: -100px;
+    padding-top: 0px;
+    padding-bottom: 2px;
+    padding-left: 1px;
+    text-align: center;
+    align-items: center;
+}
 #textoBloco22{
     text-align: center;
     margin-left: 80px;
@@ -120,9 +131,6 @@ body{
     justify-content: space-around;
     
 }
-#kitsTexto1{
-
-}
 #kitsTexto1 h1{
     margin-left: 50px;
 }
@@ -136,7 +144,7 @@ body{
     
 }
 #linksDiretos a{
-    color: #000000;
+    
     font-size: 25px;
     margin-top: 10px;
     text-align: center;
@@ -185,7 +193,7 @@ body{
     text-align: center;
 }
 #campoComFoto{
-    margin-top: 0px;
+    margin-top: -10px;
     padding-top: 80px;
     height: 400px;
     display: flex;
